test text for main to check spacing

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,35 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <p>This is a wonderful paragraph about nothing in particular</p>
+      <h1>Hello World!</h1>
+      <p>ghaoihjeihjl;akgh ldhfoihglakshdj lkdfh aoif
+        ghaoisdhgfklashjgliasj
+        jgodihaslkdngfioashdhjoiajeohgalg
+        jfoasdihg
+      </p>
+      <p>This is a wonderful paragraph about nothing in particular</p>
+      <h1>Hello World!</h1>
+      <p>ghaoihjeihjl;akgh ldhfoihglakshdj lkdfh aoif
+        ghaoisdhgfklashjgliasj
+        jgodihaslkdngfioashdhjoiajeohgalg
+        jfoasdihg
+      </p>
+      <p>This is a wonderful paragraph about nothing in particular</p>
+      <h1>Hello World!</h1>
+      <p>ghaoihjeihjl;akgh ldhfoihglakshdj lkdfh aoif
+        ghaoisdhgfklashjgliasj
+        jgodihaslkdngfioashdhjoiajeohgalg
+        jfoasdihg
+      </p>
+      <p>This is a wonderful paragraph about nothing in particular</p>
+      <h1>Hello World!</h1>
+      <p>ghaoihjeihjl;akgh ldhfoihglakshdj lkdfh aoif
+        ghaoisdhgfklashjgliasj
+        jgodihaslkdngfioashdhjoiajeohgalg
+        jfoasdihg
+      </p>
+    </main>
   </body>
 </html>
