--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
     
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -36,7 +37,7 @@
       </section>
     </nav>
 
-    <header>
+    <header class="user">
       <div class="avatar">
         <img src="/images/profile-hex.png"> 
       </div>
@@ -58,6 +59,28 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section class="tweets">
+        <article class="tweet">
+          <header>
+            <div>
+              <img src="/images/profile-hex.png" alt="photo">
+              <p>Newton</p>
+            </div>
+            <p>@SirIsaac</p>
+          </header>
+          <div class="text">
+            <p>If I have seen further it is by standing on the shoulders of giants</p>
+          </div>
+          <footer>
+            <p class="posted-time">10 days ago</p>
+            <div class="icons">
+              <i class="fa-solid fa-flag"></i>
+              <i class="fa-solid fa-retweet"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </footer>
+        </article>
       </section>
     </main>
   </body>
