--- a/public/index.html
+++ b/public/index.html
@@ -61,27 +61,7 @@
           </div>
         </form>
       </section>
-      <section class="tweets">
-        <article class="tweet">
-          <header>
-            <div>
-              <img src="/images/profile-hex.png" alt="photo">
-              <p>Newton</p>
-            </div>
-            <p>@SirIsaac</p>
-          </header>
-          <div class="text">
-            <p>If I have seen further it is by standing on the shoulders of giants</p>
-          </div>
-          <footer>
-            <p class="posted-time">10 days ago</p>
-            <div class="icons">
-              <i class="fa-solid fa-flag"></i>
-              <i class="fa-solid fa-retweet"></i>
-              <i class="fa-solid fa-heart"></i>
-            </div>
-          </footer>
-        </article>
+      <section class="tweets-container">
       </section>
     </main>
   </body>
