--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       </section>
     </nav>
 
+    <!-- Header displaying user's picture and name -->
     <header class="user">
       <div class="avatar">
         <img src="/images/profile-hex.png"> 
@@ -50,10 +51,10 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <!-- Form to post a tweet -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets" method="POST">
-          <!-- <label for="tweet-text">What are you humming about?</label> -->
+        <form id="tweet-form" action="/tweets" method="POST">
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
             <button type="submit">Tweet</button>
@@ -61,6 +62,7 @@
           </div>
         </form>
       </section>
+      <!-- Posted tweets -->
       <section class="tweets-container">
       </section>
     </main>
