reference added for window scrolling script

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/screen-navigation.js"></script>
 
   </head>
 
@@ -33,8 +34,12 @@
     <nav>
       <h1>tweeter</h1>
       <section>
-        <p><span class="bold">Write</span> a new tweet</p>
-        <i class="fa-solid fa-angles-down fa-bounce"></i>
+        <button type="button" class="window-scroll">
+          <p><span class="bold">Write</span> a new tweet</p>
+        </button>
+        <button type="button" class="window-scroll">
+          <i class="fa-solid fa-angles-down fa-bounce"></i>
+        </button>
       </section>
     </nav>
 
