--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/top-of-page-button.css" type="text/css" />
     
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -75,6 +76,11 @@
       </section>
       <!-- Posted tweets -->
       <section class="tweets-container">
+      </section>
+      <section class="lower-screen-buttons">
+        <button type="button" class="window-scroll to-top">
+          <i class="fa-solid fa-angles-up"></i>
+        </button>
       </section>
     </main>
   </body>
