--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       </div>
       <br>
       <div class="name">
-        <h2>Your Name</h2>
+        <h2><span class="bold">Your</span> Name</h2>
       </div>
     </header>
 
