--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       </div>
       <br>
       <div class="name">
-        <h2><span class="bold">Your</span> Name</h2>
+        <h2><span class="bold">Amy</span> Mansell</h2>
       </div>
     </header>
 
@@ -77,6 +77,7 @@
       <!-- Posted tweets -->
       <section class="tweets-container">
       </section>
+      <!-- Extra buttons -->
       <section class="lower-screen-buttons">
         <button type="button" class="window-scroll to-top">
           <i class="fa-solid fa-angles-up"></i>
